tkg-extensions-mods-examples/authentication/pinniped/dex-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dex
  namespace: tanzu-system-auth
spec:
  virtualhost:
    fqdn: # populated by scripts
    tls:
      passthrough: true
  tcpproxy:
    services:
    - name: dexsvc
      port: 443
