tkg-extensions-mods-examples/authentication/pinniped/pinniped-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: pinniped
  namespace: pinniped-supervisor
spec:
  virtualhost:
    fqdn: # populated by scripts
    tls:
      passthrough: true
  tcpproxy:
    services:
    - name: pinniped-supervisor
      port: 443
